--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 absl-py==1.3.0
+appnope==0.1.3
+asttokens==2.1.0
 astunparse==1.6.3
 attrs==22.1.0
+backcall==0.2.0
 cachetools==5.2.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 contourpy==1.0.5
 cycler==0.11.0
+debugpy==1.6.3
+decorator==5.1.1
+entrypoints==0.4
+executing==1.2.0
 flatbuffers==22.9.24
 fonttools==4.37.4
 gast==0.4.0
@@ -16,27 +23,44 @@ grpcio==1.50.0
 h5py==3.7.0
 idna==3.4
 importlib-metadata==5.0.0
+ipykernel==6.17.0
+ipython==8.6.0
+jedi==0.18.1
+joblib==1.2.0
+jupyter_client==7.4.4
+jupyter_core==4.11.2
 keras==2.10.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
 libclang==14.0.6
 Markdown==3.4.1
 MarkupSafe==2.1.1
-matplotlib==3.6.1
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
 mediapipe==0.8.11
 MouseInfo==0.1.3
+nest-asyncio==1.5.6
 numpy==1.23.4
 oauthlib==3.2.2
 opencv-contrib-python==4.6.0.66
 opencv-python==4.6.0.66
 opt-einsum==3.3.0
 packaging==21.3
+pandas==1.5.1
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.2.0
+prompt-toolkit==3.0.32
 protobuf==3.19.6
+psutil==5.9.3
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 PyAutoGUI==0.9.53
 PyGetWindow==0.0.9
+Pygments==2.13.0
 PyMsgBox==1.0.9
 pyobjc==8.5.1
 pyobjc-core==8.5.1
@@ -182,11 +206,18 @@ PyRect==0.2.0
 PyScreeze==0.1.28
 python-dateutil==2.8.2
 pytweening==1.0.4
+pytz==2022.6
+pyzmq==24.0.1
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
 rubicon-objc==0.4.2
+scikit-learn==1.1.3
+scipy==1.9.3
+seaborn==0.12.1
 six==1.16.0
+sklearn==0.0
+stack-data==0.6.0
 tensorboard==2.10.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
@@ -194,8 +225,12 @@ tensorflow==2.10.0
 tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.27.0
 termcolor==2.0.1
+threadpoolctl==3.1.0
+tornado==6.2
+traitlets==5.5.0
 typing_extensions==4.4.0
 urllib3==1.26.12
+wcwidth==0.2.5
 Werkzeug==2.2.2
 wrapt==1.14.1
 zipp==3.9.0
